--- a/index.html
+++ b/index.html
@@ -53,59 +53,55 @@
 	<div class="overall">
 	<div class="gallery">
 	  <div id="images">
-	    <img src="Desert.jpg" alt="img1" width="200px">
+	    <img src="croptop1.jpg" alt="img1" width="200px">
 	    <div class="desc">Some text...</div>
 	  </div>
 	  <div id="images">
-		<img src="Desert.jpg" alt="img2" width="200px">
+		<img src="croptop2.jpg" alt="img2" width="200px">
 	    <div class="desc">Some text...</div>
 	  </div>
 	  <div id="images">
-		<img src="Desert.jpg" alt="img2" width="200px">
+		<img src="croptop3.jpg" alt="img2" width="200px">
 	    <div class="desc">Some text...</div>
 	  </div>
 	</div>
-	<p>Design 1.</p>
-	</div>
-	
-	<div class="overall">
-	<div class="gallery">
-	  <div id="images">
-	    <img src="Tulips.jpg" alt="img1" width="200px">
-	    <div class="desc">Some text...</div>
-	  </div>
-	  <div id="images">
-		<img src="Tulips.jpg" alt="img2" width="200px">
-	    <div class="desc">Some text...</div>
-	  </div>
-	  <div id="images">
-		<img src="Tulips.jpg" alt="img2" width="200px">
-	    <div class="desc">Some text...</div>
-	  </div>
-	</div>
-	<p>Design 2.</p>
-	<p>Design 2.</p>
-	<p>Design 2.</p>
-	<p>Design 2.</p>
-	<p>Design 2.</p>
+	<p>Price - 35000ks</p>
 	</div>
 	
 	<div class="overall">
 	<div class="gallery">
 	  <div id="images">
-	    <img src="Desert.jpg" alt="img1" width="200px">
+	    <img src="haha1.jpg" alt="img1" width="200px">
 	    <div class="desc">Some text...</div>
 	  </div>
 	  <div id="images">
-		<img src="Desert.jpg" alt="img2" width="200px">
+		<img src="haha2.jpg" alt="img2" width="200px">
 	    <div class="desc">Some text...</div>
 	  </div>
 	  <div id="images">
-		<img src="Desert.jpg" alt="img2" width="200px">
+		<img src="haha3.jpg" alt="img2" width="200px">
 	    <div class="desc">Some text...</div>
 	  </div>
 	</div>
-	<p>Design 3.</p>
+	<p>Price - 30000ks</p>
+	</div>
+	
+	<div class="overall">
+	<div class="gallery">
+	  <div id="images">
+	    <img src="sweater1.jpg" alt="img1" width="200px">
+	    <div class="desc">Some text...</div>
+	  </div>
+	  <div id="images">
+		<img src="sweater2.jpg" alt="img2" width="200px">
+	    <div class="desc">Some text...</div>
+	  </div>
+	  <div id="images">
+		<img src="olivia.jpg" alt="img2" width="200px">
+	    <div class="desc">Some text...</div>
+	  </div>
+	</div>
+	<p>Price - 50000ks</p>
 	</div>
 </body>
 
