--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@
   
   <div class="modal">
     <div class="modal-content">
-      <img src="Tulips.jpg" alt="tulips" width="100%">
-	  <p class="text">Tulips are so beautiful.</p>
+      <img src="croptop1.jpg" alt="tulips" width="100%">
+	  <p class="text">Wow, you like it.</p>
 	  <p id="code">code - CC001</p>
 	  <p><span id="price">$30.35</span></p>
     </div>
 	
 	<div class="modal-content">
-      <img src="Desert.jpg" alt="tulips" width="100%">
-	  <p class="text">Have you ever go to the Desert.</p>
+      <img src="sweater1.jpg" alt="tulips" width="100%">
+	  <p class="text">Try this!!</p>
 	  <p id="code">code - CC002</p>
 	  <p><span id="price">$30.35</span></p>
     </div>
 	<div class="modal-content">
-      <img src="Tulips.jpg" alt="tulips" width="100%">
-	  <p class="text">Tulips are most beautiful flower.</p>
+      <img src="haha1.jpg" alt="tulips" width="100%">
+	  <p class="text">HaHa oppa.</p>
 	  <p id="code">code - CC003</p>
 	  <p><span id="price">$30.35</span></p>
     </div>
